# helma

./: .gitignore  .hlint.yaml  .stylish-haskell.yaml  Makefile  README.md  \  alias.sh  build.gradle  cabal.project  cabal.project.appendix  check-whitespace.sh  compile-streaming.sh  compile.sh  exec.sh  helcam.cabal  helma.cabal  hlint-mv.sh  hlint.sh  hpack.sh  png_to_npm.sh  report.sh  run.sh  stan.sh  stylish-haskell.sh  update.sh
.github/: FUNDING.yml
.github/workflows/: codacy.yml  stale.yml
docs/: ARCHITECTURE.md  AUTHORS.md  BUGS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.md  INSTALL.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  NEWS.md  README.md  ROADMAP.md  THANKS.md  TODO.md  _config.yml
docs/developers/: ARCHITECTURE.md  BUGS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ROADMAP.md
docs/license/: LICENSE  LICENSE-APACHE  LICENSE-MIT
docs/reports/: HelVM-HelMA-Automata-BrainFuck-API-BFType.html  HelVM-HelMA-Automata-BrainFuck-Common-SimpleInstruction.html  HelVM-HelMA-Automata-BrainFuck-Common-Symbol.html  HelVM-HelMA-Automata-BrainFuck-Common-TapeOfSymbols.html  HelVM-HelMA-Automata-BrainFuck-Evaluator.html  HelVM-HelMA-Automata-BrainFuck-Impl-Fast-Evaluator.html  HelVM-HelMA-Automata-BrainFuck-Impl-Fast-Instruction.html  HelVM-HelMA-Automata-BrainFuck-Impl-Fast-Optimizer.html  HelVM-HelMA-Automata-BrainFuck-Impl-Fast-Parser.html  HelVM-HelMA-Automata-BrainFuck-Impl-Flat-Evaluator.html  HelVM-HelMA-Automata-BrainFuck-Impl-Flat-Instruction.html  HelVM-HelMA-Automata-BrainFuck-Impl-Flat-Parser.html  HelVM-HelMA-Automata-BrainFuck-Impl-Flat-TableOfInstructions.html  HelVM-HelMA-Automata-BrainFuck-Impl-Tree-Evaluator.html  HelVM-HelMA-Automata-BrainFuck-Impl-Tree-Instruction.html  HelVM-HelMA-Automata-BrainFuck-Impl-Tree-InstructionUnit.html  HelVM-HelMA-Automata-BrainFuck-Impl-Tree-Parser.html  HelVM-HelMA-Automata-Cat-Evaluator.html  HelVM-HelMA-Automata-ETA-API-ETAImplType.html  HelVM-HelMA-Automata-ETA-Addressing.html  HelVM-HelMA-Automata-ETA-Automaton.html  HelVM-HelMA-Automata-ETA-Evaluator.html  HelVM-HelMA-Automata-ETA-Lexer.html  HelVM-HelMA-Automata-ETA-OperandParsers.html  HelVM-HelMA-Automata-ETA-Optimizer.html  HelVM-HelMA-Automata-ETA-Parser.html  HelVM-HelMA-Automata-ETA-SimpleParams.html  HelVM-HelMA-Automata-ETA-Symbol.html  HelVM-HelMA-Automata-ETA-Token.html  HelVM-HelMA-Automata-FALSE-Expression.html  HelVM-HelMA-Automata-FALSE-Parser.html  HelVM-HelMA-Automata-LazyK-Automaton.html  HelVM-HelMA-Automata-LazyK-Constants.html  HelVM-HelMA-Automata-LazyK-Evaluator.html  HelVM-HelMA-Automata-LazyK-InputEncoder.html  HelVM-HelMA-Automata-LazyK-Lambda.html  HelVM-HelMA-Automata-LazyK-Lexer.html  HelVM-HelMA-Automata-LazyK-Parser.html  HelVM-HelMA-Automata-LazyK-Reducer.html  HelVM-HelMA-Automata-Piet-Color.html  (+89 more)
docs/reports/doc/: HelVM-Common-Collections-MapList.html  HelVM-Common-Collections-SList.html  HelVM-Common-Containers-LLIndexSafe.html  HelVM-Common-Containers-LLInsertDef.html  HelVM-Common-Containers-MTIndexSafe.html  HelVM-Common-Containers-MTInsertDef.html  HelVM-Common-Containers-Util.html  HelVM-Common-Control-Control.html  HelVM-Common-Control-Logger.html  HelVM-Common-Control-Message.html  HelVM-Common-Control-Safe.html  HelVM-Common-Digit-Digitable.html  HelVM-Common-Digit-Digits.html  HelVM-Common-Digit-ToDigit.html  HelVM-Common-ListLikeUtil.html  HelVM-Common-NamedValue.html  HelVM-Common-ReadText.html  HelVM-Common-SequencesUtil.html  HelVM-Common-Util.html  HelVM-Common-ZipA.html  HelVM-HelMA-Automata-BrainFuck-Automaton-FlatAutomaton.html  HelVM-HelMA-Automata-BrainFuck-Automaton.html  HelVM-HelMA-Automata-BrainFuck-Instruction-FlatInstruction.html  HelVM-HelMA-Automata-BrainFuck-Instruction-SimpleInstruction.html  HelVM-HelMA-Automata-BrainFuck-Instruction-TreeInstruction.html  HelVM-HelMA-Automata-BrainFuck-Lexer.html  HelVM-HelMA-Automata-BrainFuck-Parser.html  HelVM-HelMA-Automata-BrainFuck-TableOfInstructions.html  HelVM-HelMA-Automata-BrainFuck-TapeOfSymbols.html  HelVM-HelMA-Automata-Cat-Automaton.html  HelVM-HelMA-Automata-ETA-Addressing.html  HelVM-HelMA-Automata-ETA-Automaton.html  HelVM-HelMA-Automata-ETA-Lexer.html  HelVM-HelMA-Automata-ETA-OperandParsers.html  HelVM-HelMA-Automata-ETA-Symbol.html  HelVM-HelMA-Automata-ETA-Token.html  HelVM-HelMA-Automata-Rev-Automaton.html  HelVM-HelMA-Automata-SubLeq-Automaton.html  HelVM-HelMA-Automata-SubLeq-Evaluator.html  HelVM-HelMA-Automata-SubLeq-Lexer.html  (+60 more)
docs/reports/helma/: HelVM-HelMA-Automata-BrainFuck-API-BFType.html  HelVM-HelMA-Automata-BrainFuck-Automaton-FlatAutomaton.html  HelVM-HelMA-Automata-BrainFuck-Automaton-SomeAutomaton.html  HelVM-HelMA-Automata-BrainFuck-Automaton-TreeAutomaton.html  HelVM-HelMA-Automata-BrainFuck-Automaton.html  HelVM-HelMA-Automata-BrainFuck-Common-PureInstruction.html  HelVM-HelMA-Automata-BrainFuck-Common-SimpleInstruction.html  HelVM-HelMA-Automata-BrainFuck-Common-Symbol.html  HelVM-HelMA-Automata-BrainFuck-Common-TapeOfSymbols.html  HelVM-HelMA-Automata-BrainFuck-Evaluator.html  HelVM-HelMA-Automata-BrainFuck-Fast-Automaton.html  HelVM-HelMA-Automata-BrainFuck-Fast-Instruction.html  HelVM-HelMA-Automata-BrainFuck-Fast-Parser.html  HelVM-HelMA-Automata-BrainFuck-Flat-Automaton.html  HelVM-HelMA-Automata-BrainFuck-Flat-Instruction.html  HelVM-HelMA-Automata-BrainFuck-Flat-Parser.html  HelVM-HelMA-Automata-BrainFuck-Flat-TableOfInstructions.html  HelVM-HelMA-Automata-BrainFuck-Impl-Fast-Automaton.html  (+209 more)
docs/reports/helma-test/: hpc_index.html  hpc_index_alt.html  hpc_index_exp.html  hpc_index_fun.html
docs/users/: AUTHORS.md  FAQ.md  INSTALL.md  NEWS.md  THANKS.md  TODO.md
examples/bf/: bfcl.bf  fascistHelloWorld.bf  helloWorldWithComments.bf  helloyou.bf  ryan-beer.bf  triangle.bf  value256.bf
examples/f/helma/: add.f  (+3 more)
examples/mu/: brainfuck.mu  cat.mu  hello-world.mu  quine-relay.mu
examples/sh/: HelloWorld.cat  HelloWorld.rev
examples/sq/: hello.sq  longHello.sq
hs/app/: AppOptions.hs  BoolTypes.hs  Emit.hs  Lang.hs  Main.hs
hs/benchmark/: Main.hs
hs/test/: Main.hs  Slow.hs  SpecHook.hs
(+2138 files in other folders)
