cabal-version:         2.4

name:                  helma
version:               0.8.0.0

synopsis:              HELMA - Haskellish Esoteric Limited Minimal Automaton
description:           Please see the README on GitHub at <https://github.com/helvm/helma#readme>
homepage:              http://helvm.org/helma/
bug-reports:           https://github.com/helvm/helma/issues

license:               Apache-2.0
license-file:          docs/license/LICENSE-APACHE
author:                Kamil Adam
maintainer:            kamil.adam.zabinski@gmail.com
copyright:             2020-2022 WriteOnly Developers

category:              Language
build-type:            Simple
extra-source-files:
  docs/developers/CHANGELOG.md
  docs/README.md

tested-with:           GHC == 9.2.1

source-repository head
  type:                git
  location:            https://github.com/helvm/helma

flag ghcoptions
  description:         compile with options
  manual:              True
  default:             False

common common-options
  build-depends:
      base                 <  4.16
    , relude               == 1.0.0.1
  mixins:
      base hiding (Prelude)
    , relude (Relude as Prelude , Relude.Extra , Relude.Unsafe , Data.Text)
  default-language:    Haskell2010
  default-extensions:
    EmptyDataDecls
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
--    NoImplicitPrelude
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeFamilies
    TypeSynonymInstances
    ViewPatterns
--    CPP
--    TemplateHaskell
--    ForeignFunctionInterface
--    MagicHash
--    UnliftedFFITypes
    TypeOperators
--    UnboxedTuples
--    PackageImports
--    QuasiQuotes
--    DeriveAnyClass
--    DeriveLift
--    StaticPointers
    DerivingStrategies
    ConstraintKinds
    StrictData
  if flag(ghcoptions)
    ghc-options:
      -Wall
      -Wcompat
      -Widentities
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
      -Wredundant-constraints
      -Wnoncanonical-monad-instances
      -fhide-source-paths
--      -Wmissing-export-lists FIXME
       -Wpartial-fields
      -Wmissing-deriving-strategies
      -fwrite-ide-info
      -hiedir=.hie
      -Wunused-packages
      -fprint-potential-instances
      -Werror

library
  import:              common-options
  hs-source-dirs:      hs/src
  exposed-modules:

    HelVM.HelMA.Automaton.API.IOTypes
    HelVM.HelMA.Automaton.API.RunParams
    HelVM.HelMA.Automaton.API.TypeOptions

    HelVM.HelMA.Automaton.BIntegral

    HelVM.HelMA.Automaton.Dynamic.DynamicIntegral
    HelVM.HelMA.Automaton.Dynamic.DynamicVar

    HelVM.HelMA.Automaton.IO.BusinessIO
    HelVM.HelMA.Automaton.IO.EvaluatorIO
    HelVM.HelMA.Automaton.IO.FreeIO
    HelVM.HelMA.Automaton.IO.MockIO

    HelVM.HelMA.Automaton.Instruction

    HelVM.HelMA.Automaton.Instruction.ALInstruction
    HelVM.HelMA.Automaton.Instruction.CFInstruction
    HelVM.HelMA.Automaton.Instruction.IOInstruction
    HelVM.HelMA.Automaton.Instruction.LSInstruction

    HelVM.HelMA.Automaton.Operator.BinaryOperator
    HelVM.HelMA.Automaton.Operator.HighControlOperator
    HelVM.HelMA.Automaton.Operator.IOOperator
    HelVM.HelMA.Automaton.Operator.IORamOperator
    HelVM.HelMA.Automaton.Operator.LowControlOperator
    HelVM.HelMA.Automaton.Operator.MemoryOperator
    HelVM.HelMA.Automaton.Operator.StackOperator
    HelVM.HelMA.Automaton.Operator.UnaryOperator
    HelVM.HelMA.Automaton.Operator.Util

    HelVM.HelMA.Automaton.ReadPExtra

    HelVM.HelMA.Automaton.Units.ALU
    HelVM.HelMA.Automaton.Units.CPU
    HelVM.HelMA.Automaton.Units.LSU
    HelVM.HelMA.Automaton.Units.RAM
    HelVM.HelMA.Automaton.Units.Unit

    HelVM.HelMA.Automaton.Types.CellType
    HelVM.HelMA.Automaton.Types.DumpType
    HelVM.HelMA.Automaton.Types.IntCellType
    HelVM.HelMA.Automaton.Types.RAMType
    HelVM.HelMA.Automaton.Types.StackType
    HelVM.HelMA.Automaton.Types.TokenType

    HelVM.HelMA.Automaton.WrapTokenList

    HelVM.HelMA.Automata.BrainFuck.Automaton
    HelVM.HelMA.Automata.BrainFuck.Automaton.FlatAutomaton
    HelVM.HelMA.Automata.BrainFuck.Automaton.TreeAutomaton

    HelVM.HelMA.Automata.BrainFuck.Instruction.FlatInstruction
    HelVM.HelMA.Automata.BrainFuck.Instruction.SimpleInstruction
    HelVM.HelMA.Automata.BrainFuck.Instruction.TreeInstruction

    HelVM.HelMA.Automata.BrainFuck.Lexer
    HelVM.HelMA.Automata.BrainFuck.Parser
    HelVM.HelMA.Automata.BrainFuck.Symbol
    HelVM.HelMA.Automata.BrainFuck.TableOfInstructions
    HelVM.HelMA.Automata.BrainFuck.TapeOfSymbols

    HelVM.HelMA.Automata.Cat.Automaton

    HelVM.HelMA.Automata.ETA.Addressing
    HelVM.HelMA.Automata.ETA.Automaton
    HelVM.HelMA.Automata.ETA.Evaluator
    HelVM.HelMA.Automata.ETA.Lexer
    HelVM.HelMA.Automata.ETA.OperandParsers
    HelVM.HelMA.Automata.ETA.Symbol
    HelVM.HelMA.Automata.ETA.Token

    HelVM.HelMA.Automata.False.Value

    HelVM.HelMA.Automata.False.API.Version
    HelVM.HelMA.Automata.False.Evaluator.LLEvaluator
    HelVM.HelMA.Automata.False.Parser

    HelVM.HelMA.Automata.False.ThulsaDum.Evaluator.LLEvaluator
    HelVM.HelMA.Automata.False.ThulsaDum.Evaluator
    HelVM.HelMA.Automata.False.ThulsaDum.Parser

    HelVM.HelMA.Automata.False.ThunderSeethe.Evaluator.LLEvaluator
    HelVM.HelMA.Automata.False.ThunderSeethe.Evaluator
    HelVM.HelMA.Automata.False.ThunderSeethe.Parser

    HelVM.HelMA.Automata.False.Util.Util
    HelVM.HelMA.Automata.False.Util

    HelVM.HelMA.Automata.LazyK.Automaton
    HelVM.HelMA.Automata.LazyK.Constants
    HelVM.HelMA.Automata.LazyK.Evaluator
    HelVM.HelMA.Automata.LazyK.InputEncoder
    HelVM.HelMA.Automata.LazyK.Lambda
    HelVM.HelMA.Automata.LazyK.Lexer
    HelVM.HelMA.Automata.LazyK.Parser
    HelVM.HelMA.Automata.LazyK.Reducer

    HelVM.HelMA.Automata.Rev.Automaton

    HelVM.HelMA.Automata.SubLeq.Automaton
    HelVM.HelMA.Automata.SubLeq.Evaluator
    HelVM.HelMA.Automata.SubLeq.Lexer
    HelVM.HelMA.Automata.SubLeq.Symbol

    HelVM.HelMA.Automata.WhiteSpace.Automaton
    HelVM.HelMA.Automata.WhiteSpace.Evaluator
    HelVM.HelMA.Automata.WhiteSpace.Lexer
    HelVM.HelMA.Automata.WhiteSpace.OperandParsers
    HelVM.HelMA.Automata.WhiteSpace.Parser
    HelVM.HelMA.Automata.WhiteSpace.SimpleParams
    HelVM.HelMA.Automata.WhiteSpace.Symbol
    HelVM.HelMA.Automata.WhiteSpace.Token

    HelVM.HelMA.Automata.Zot.Automaton
    HelVM.HelMA.Automata.Zot.Parser
    HelVM.HelMA.Automata.Zot.Evaluator
    HelVM.HelMA.Automata.Zot.Expression

  build-depends:
      helio
    , containers           <  0.7
    , bytestring
    , data-default
    , dlist
    , extra
    , free
    , ListLike
    , mono-traversable
    , mtl
    , natural-transformation
    , text
    , parsec
    , type-operators
    , vector

  ghc-options:

executable helma
  import:              common-options
  hs-source-dirs:      hs/app
  main-is:             Main.hs
  other-modules:
    AppOptions
    Lang
  build-depends:
      helio
    , helma
    , optparse-applicative >= 0.14.3.0
    , pretty-simple
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

test-suite helma-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      hs/test
  main-is:             Main.hs
  other-modules:
    Spec

    HelVM.Expectations
    HelVM.GoldenExpectations

    HelVM.HelMA.Automaton.API.TypeOptionsExtra
    HelVM.HelMA.Automaton.FilterIf0Spec

    HelVM.HelMA.Automata.FileExtra

    HelVM.HelMA.Automata.BrainFuck.AutomatonSpec
    HelVM.HelMA.Automata.BrainFuck.AutomatonSpecData
    HelVM.HelMA.Automata.BrainFuck.FileExtra
    HelVM.HelMA.Automata.BrainFuck.InstructionSpec

    HelVM.HelMA.Automata.Cat.AutomatonSpec

    HelVM.HelMA.Automata.ETA.AddressingSpec
    HelVM.HelMA.Automata.ETA.AutomatonSpec
    HelVM.HelMA.Automata.ETA.FileExtra
    HelVM.HelMA.Automata.ETA.LexerSpec
    HelVM.HelMA.Automata.ETA.OperandParsersSpec

    HelVM.HelMA.Automata.False.FileExtra
    HelVM.HelMA.Automata.False.ParserSpec
    HelVM.HelMA.Automata.False.ThulsaDum.EvaluatorSpec
    HelVM.HelMA.Automata.False.ThunderSeethe.EvaluatorSpec

    HelVM.HelMA.Automata.LazyK.AutomatonSpec
    HelVM.HelMA.Automata.LazyK.FileExtra
    HelVM.HelMA.Automata.LazyK.NumberSpec
    HelVM.HelMA.Automata.LazyK.ParserSpec

    HelVM.HelMA.Automata.Rev.AutomatonSpec

    HelVM.HelMA.Automata.SubLeq.AutomatonSpec
    HelVM.HelMA.Automata.SubLeq.AutomatonSpecData
    HelVM.HelMA.Automata.SubLeq.FileExtra
    HelVM.HelMA.Automata.SubLeq.LexerSpec

    HelVM.HelMA.Automata.WhiteSpace.AutomatonSpec
    HelVM.HelMA.Automata.WhiteSpace.FileExtra
    HelVM.HelMA.Automata.WhiteSpace.OperandParsersSpec
    HelVM.HelMA.Automata.WhiteSpace.ParserSpec

    HelVM.HelMA.Automata.Zot.AutomatonSpec
    HelVM.HelMA.Automata.Zot.FileExtra

  build-depends:
      hspec
    , hspec-core
    , hspec-expectations-pretty-diff
    , hspec-golden
    , hspec-slow

    , helio
    , helma

    , filepath
    , type-operators
    , vector

  build-tool-depends:  hspec-discover:hspec-discover == 2.*
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

benchmark helma-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      hs/benchmark
  main-is:             Main.hs
  other-modules:

    HelVM.HelMA.Automata.FileExtra

    HelVM.HelMA.Automata.BrainFuck.AutomatonBenchMark
    HelVM.HelMA.Automata.BrainFuck.FileExtra

    HelVM.HelMA.Automata.ETA.AutomatonBenchMark
    HelVM.HelMA.Automata.ETA.FileExtra

    HelVM.HelMA.Automata.SubLeq.AutomatonBenchMark
    HelVM.HelMA.Automata.SubLeq.FileExtra

    HelVM.HelMA.Automata.WhiteSpace.AutomatonBenchMark
    HelVM.HelMA.Automata.WhiteSpace.FileExtra

  build-depends:
      gauge

    , helio
    , helma

    , filepath
    , ListLike

  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
