cabal-version:         2.4

name:                  helma
version:               0.8.4.6
synopsis:              HELMA - Haskellish Esoteric Limited Minimal Automaton
description:           Please see the README on GitHub at <https://github.com/helvm/helma#readme>
homepage:              http://helvm.org/helma/
bug-reports:           https://github.com/helvm/helma/issues

license:               Apache-2.0
license-file:          docs/license/LICENSE-APACHE
author:                Kamil Adam
maintainer:            kamil.adam.zabinski@gmail.com
copyright:             2020-2023 WriteOnly Developers

category:              Language
build-type:            Simple
extra-source-files:
  docs/developers/CHANGELOG.md
  docs/README.md

tested-with:           GHC == 9.6.1

source-repository head
  type:                git
  location:            https://github.com/helvm/helma

flag ghcoptions
  description:         compile with options
  manual:              True
  default:             False

common common-options
  build-depends:
      base                 <  4.19
    , relude               == 1.1.0.0
  mixins:
      base hiding (Prelude)
    , relude (Relude as Prelude, Relude.Extra, Data.Text)
  default-language:    Haskell2010
  default-extensions:
    EmptyDataDecls
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
--    NoImplicitPrelude
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeFamilies
    TypeSynonymInstances
    ViewPatterns
--    CPP
--    TemplateHaskell
--    ForeignFunctionInterface
--    MagicHash
--    UnliftedFFITypes
    TypeOperators
--    UnboxedTuples
--    PackageImports
--    QuasiQuotes
--    DeriveAnyClass
--    DeriveLift
--    StaticPointers
    DerivingStrategies
    ConstraintKinds
    StrictData
  if flag(ghcoptions)
    ghc-options:
      -Wall
      -Wcompat
      -Widentities
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
      -Wredundant-constraints
      -Wnoncanonical-monad-instances
      -fhide-source-paths
--      -Wmissing-export-lists FIXME
       -Wpartial-fields
      -Wmissing-deriving-strategies
      -fwrite-ide-info
      -hiedir=.hie
      -Wunused-packages
      -fprint-potential-instances
      -Werror

library
  import:              common-options
  hs-source-dirs:      hs/src
  exposed-modules:

    HelVM.HelMA.Automaton.API.AutomatonOptions
    HelVM.HelMA.Automaton.API.MemoryOptions
    HelVM.HelMA.Automaton.API.AutoOptions
    HelVM.HelMA.Automaton.API.EvalParams
    HelVM.HelMA.Automaton.API.IOTypes
    HelVM.HelMA.Automaton.API.OptimizationLevel

    HelVM.HelMA.Automaton.Automaton
    HelVM.HelMA.Automaton.Loop

    HelVM.HelMA.Automaton.IO.BusinessIO
    HelVM.HelMA.Automaton.IO.AutomatonIO
    HelVM.HelMA.Automaton.IO.FreeIO
    HelVM.HelMA.Automaton.IO.MockIO

    HelVM.HelMA.Automaton.Instruction
    HelVM.HelMA.Automaton.Instruction.CFInstruction
    HelVM.HelMA.Automaton.Instruction.IOInstruction
    HelVM.HelMA.Automaton.Instruction.LSInstruction
    HelVM.HelMA.Automaton.Instruction.SInstruction

    HelVM.HelMA.Automaton.Optimizer
    HelVM.HelMA.Automaton.Optimizer.ConstantFoldingOptimizer
    HelVM.HelMA.Automaton.Optimizer.PeepholeOptimizer

    HelVM.HelMA.Automaton.PrettyPrinter

    HelVM.HelMA.Automaton.ReadPExtra

    HelVM.HelMA.Automaton.Symbol

    HelVM.HelMA.Automaton.Trampoline

    HelVM.HelMA.Automaton.Types.CellType
    HelVM.HelMA.Automaton.Types.DumpType
    HelVM.HelMA.Automaton.Types.FormatType
    HelVM.HelMA.Automaton.Types.IntCellType
    HelVM.HelMA.Automaton.Types.RAMType
    HelVM.HelMA.Automaton.Types.StackType
    HelVM.HelMA.Automaton.Types.TokenType

    HelVM.HelMA.Automaton.Combiner
    HelVM.HelMA.Automaton.Combiner.ALU
    HelVM.HelMA.Automaton.Combiner.CPU
    HelVM.HelMA.Automaton.Combiner.LSU
    HelVM.HelMA.Automaton.Combiner.RAM

    HelVM.HelMA.Automaton.WrapTokenList

    HelVM.HelMA.Automata.BrainFuck.Evaluator

    HelVM.HelMA.Automata.BrainFuck.API.BFType

    HelVM.HelMA.Automata.BrainFuck.Common.SimpleInstruction
    HelVM.HelMA.Automata.BrainFuck.Common.Symbol
    HelVM.HelMA.Automata.BrainFuck.Common.TapeOfSymbols

    HelVM.HelMA.Automata.BrainFuck.Impl.Fast.Evaluator
    HelVM.HelMA.Automata.BrainFuck.Impl.Fast.Instruction
    HelVM.HelMA.Automata.BrainFuck.Impl.Fast.Optimizer
    HelVM.HelMA.Automata.BrainFuck.Impl.Fast.Parser

    HelVM.HelMA.Automata.BrainFuck.Impl.Flat.Evaluator
    HelVM.HelMA.Automata.BrainFuck.Impl.Flat.Instruction
    HelVM.HelMA.Automata.BrainFuck.Impl.Flat.Parser
    HelVM.HelMA.Automata.BrainFuck.Impl.Flat.TableOfInstructions

    HelVM.HelMA.Automata.BrainFuck.Impl.Tree.Evaluator
    HelVM.HelMA.Automata.BrainFuck.Impl.Tree.Instruction
    HelVM.HelMA.Automata.BrainFuck.Impl.Tree.InstructionUnit
    HelVM.HelMA.Automata.BrainFuck.Impl.Tree.Parser

    HelVM.HelMA.Automata.Cat.Evaluator

    HelVM.HelMA.Automata.ETA.API.ETAImplType

    HelVM.HelMA.Automata.ETA.Addressing
    HelVM.HelMA.Automata.ETA.Automaton
    HelVM.HelMA.Automata.ETA.Evaluator
    HelVM.HelMA.Automata.ETA.Lexer
    HelVM.HelMA.Automata.ETA.OperandParsers
    HelVM.HelMA.Automata.ETA.Optimizer
    HelVM.HelMA.Automata.ETA.Parser
    HelVM.HelMA.Automata.ETA.SimpleParams
    HelVM.HelMA.Automata.ETA.Symbol
    HelVM.HelMA.Automata.ETA.Token

    HelVM.HelMA.Automata.FALSE.Expression
    HelVM.HelMA.Automata.FALSE.Parser

    HelVM.HelMA.Automata.LazyK.Automaton
    HelVM.HelMA.Automata.LazyK.Constants
    HelVM.HelMA.Automata.LazyK.Evaluator
    HelVM.HelMA.Automata.LazyK.InputEncoder
    HelVM.HelMA.Automata.LazyK.Lambda
    HelVM.HelMA.Automata.LazyK.Lexer
    HelVM.HelMA.Automata.LazyK.Parser
    HelVM.HelMA.Automata.LazyK.Reducer

    HelVM.HelMA.Automata.Rev.Evaluator

    HelVM.HelMA.Automata.SubLeq.Automaton
    HelVM.HelMA.Automata.SubLeq.Evaluator
    HelVM.HelMA.Automata.SubLeq.Lexer
    HelVM.HelMA.Automata.SubLeq.Symbol

    HelVM.HelMA.Automata.WhiteSpace.Evaluator
    HelVM.HelMA.Automata.WhiteSpace.Lexer
    HelVM.HelMA.Automata.WhiteSpace.OperandParsers
    HelVM.HelMA.Automata.WhiteSpace.Parser
    HelVM.HelMA.Automata.WhiteSpace.SimpleParams
    HelVM.HelMA.Automata.WhiteSpace.Token

    HelVM.HelMA.Automata.Zot.Automaton
    HelVM.HelMA.Automata.Zot.Parser
    HelVM.HelMA.Automata.Zot.Evaluator
    HelVM.HelMA.Automata.Zot.Expression

  build-depends:
      helio
    , containers           <  0.7
    , bytestring
    , data-default
    , dlist
    , extra
    , free
    , ilist
    , ListLike
    , natural-transformation
    , mtl
    , text
    , type-operators
    , vector
    , yjtools

  ghc-options:

executable helma
  import:              common-options
  hs-source-dirs:      hs/app
  main-is:             Main.hs
  other-modules:
    AppOptions
    BoolTypes
    Emit
    Lang
  build-depends:
      helio
    , helma
    , optparse-applicative >= 0.14.3.0
    , pretty-simple
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

test-suite helma-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      hs/test
  main-is:             Main.hs
  other-modules:
    Spec
    SpecHook

    HelVM.Expectations
    HelVM.GoldenExpectations

    HelVM.HelMA.Automaton.API.AutoOptionsExtra
    HelVM.HelMA.Automaton.FilterIf0Spec
    HelVM.HelMA.Automaton.OptimizerSpec

    HelVM.HelMA.Automata.FileExtra

    HelVM.HelMA.Automata.BrainFuck.EvaluatorSpec
    HelVM.HelMA.Automata.BrainFuck.EvaluatorSpecData
    HelVM.HelMA.Automata.BrainFuck.FileExtra
    HelVM.HelMA.Automata.BrainFuck.InstructionSpec
    HelVM.HelMA.Automata.BrainFuck.ParserSpec

    HelVM.HelMA.Automata.Cat.EvaluatorSpec

    HelVM.HelMA.Automata.ETA.AddressingSpec
    HelVM.HelMA.Automata.ETA.EvaluatorSpec
    HelVM.HelMA.Automata.ETA.FileExtra
    HelVM.HelMA.Automata.ETA.LexerSpec
    HelVM.HelMA.Automata.ETA.OperandParsersSpec

    HelVM.HelMA.Automata.FALSE.FileExtra
    HelVM.HelMA.Automata.FALSE.ParserSpec

    HelVM.HelMA.Automata.LazyK.EvaluatorSpec
    HelVM.HelMA.Automata.LazyK.FileExtra
    HelVM.HelMA.Automata.LazyK.NumberSpec
    HelVM.HelMA.Automata.LazyK.ParserSpec

    HelVM.HelMA.Automata.Rev.EvaluatorSpec

    HelVM.HelMA.Automata.SubLeq.EvaluatorSpec
    HelVM.HelMA.Automata.SubLeq.EvaluatorSpecData
    HelVM.HelMA.Automata.SubLeq.FileExtra
    HelVM.HelMA.Automata.SubLeq.LexerSpec

    HelVM.HelMA.Automata.WhiteSpace.EvaluatorSpec
    HelVM.HelMA.Automata.WhiteSpace.FileExtra
    HelVM.HelMA.Automata.WhiteSpace.OperandParsersSpec
    HelVM.HelMA.Automata.WhiteSpace.ParserSpec

    HelVM.HelMA.Automata.Zot.EvaluatorSpec
    HelVM.HelMA.Automata.Zot.FileExtra

  build-depends:
      hspec
    , hspec-core
    , hspec-expectations-pretty-diff
    , hspec-golden
    , hspec-slow

    , helio
    , helma

    , filepath
    , type-operators
    , vector
    , yjtools

  build-tool-depends:  hspec-discover:hspec-discover == 2.*
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

benchmark helma-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      hs/benchmark
  main-is:             Main.hs
  other-modules:

    HelVM.HelMA.Automata.FileExtra

    HelVM.HelMA.Automata.BrainFuck.EvaluatorBenchMark
    HelVM.HelMA.Automata.BrainFuck.FileExtra

    HelVM.HelMA.Automata.ETA.EvaluatorBenchMark
    HelVM.HelMA.Automata.ETA.FileExtra

    HelVM.HelMA.Automata.SubLeq.EvaluatorBenchMark
    HelVM.HelMA.Automata.SubLeq.FileExtra

    HelVM.HelMA.Automata.WhiteSpace.EvaluatorBenchMark
    HelVM.HelMA.Automata.WhiteSpace.FileExtra

  build-depends:
      gauge

    , helio
    , helma

    , filepath
    , ListLike

  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
